# colameta

./: README.md  README.zh-CN.md  pyproject.toml
assets/gpts/: agents-generation-rules.zh-CN.md  custom-instructions.zh-CN.md  project-memory-rules.zh-CN.md  prompt-writing.zh-CN.md
runner/: cloud_agent_client.py  cloud_pairing.py  mcp_prompt_file.py  mcp_server.py  planning_bridge.py  web_console.py
scripts/: runner_cli.py
