[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "colameta"
version = "0.1.2"
description = "AI coding workflow harness connecting GPTs to local executors"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "禁止商业使用"}
keywords = ["ai", "coding", "workflow", "gpt", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/riccilnl/colameta"

[project.scripts]
colameta = "scripts.runner_cli:main"

[tool.setuptools.packages.find]
include = ["runner", "runner.*", "adapters", "adapters.*", "schemas", "schemas.*", "scripts", "scripts.*"]

[tool.setuptools.package-data]
runner = ["py.typed"]
